fix root element getting stretched

--- a/app/renderer/index.css
+++ b/app/renderer/index.css
@@ -26,5 +26,6 @@ div {
 #app {
   display: flex;
   flex: 1;
-  flex-direction: column
+  flex-direction: column;
+  max-width: 100%;
 }
